recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for (i<- 1 to 4) {
    carre()
    droite(90.)
  }
  
}

def carre() {
  for (j<-1 to 4) {
    avance(100)
    droite(90.)
  }
}